--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ body {
   padding: 20px;
   text-align: center;
 }
+
+.spacer {
+  display: inline-block;
+  width: 128px;
+}
+
+.game-mode {
+  float: right;
+}
