--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
   padding: 0;
 }
 
+canvas {
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
 .score-container {
   padding: 20px;
   text-align: center;
